<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card"
    android:orientation="vertical"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ep1Thumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/thumbnail"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:paddingBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mxRedirect"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/mx_redirect"
                android:paddingStart="5dp"
                android:paddingEnd="2dp"
                android:src="@drawable/mx_play_button" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/chName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="3dp"
                android:layout_marginStart="10dp"
                android:text="Chapter Name"
                android:textColor="@color/text"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/chDescription"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/description"
                    android:textColor="@color/subtext" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/downloadIcon"
                    android:layout_width="50dp"
                    android:paddingTop="5dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/download_button_home"
                    android:src="@drawable/download_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="RtlHardcoded" />


                <TextView
                    android:id="@+id/downloadSize"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:layout_marginEnd="5dp"
                    android:text="@string/size"
                    android:textColor="@color/purple_500"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
